Proxy file doesn't respect the strip Color Space or Sequence's #43078

Closed
opened 2014-12-31 07:52:39 +01:00 by Paulo José Oliveira Amaro · 9 comments

System Information
Operating system and graphics card

Blender Version
2.72b Hash: 9e963ae

Short description of error
A custom proxy file in a Movie Strip doesn't display the same input Color Space then the strip, and is unaffected by some Color Management settings.

Exact steps for others to reproduce the error

  • Add a Movie strip in Sequencer and set its Input Color Space as Linear - the colors will change
  • Enable "Proxy", "Proxy Custom File" and select the same movie file as the proxy. Set a resolution to test it.

The proxy will not follow the Color Space chosen in the strip properties. The proxy will not respect even the Sequence's Color Space selected in the Color Management settings.

Maybe it's related to blender/blender-staging@4ce7d5cb79

Another issue certainly related: The proxy file just uses a "Look" selected in the Color Management settings when the "Use Curves" option is enabled, or some "View" other the "Default" is selected, as Film or Raw. With Default View and without "Use Curves", the proxy display is unaffected by any selected Look.

The screenshot below shows the difference between the No Proxy display and the Proxy display:
sequencer-proxy-color-space-bug-m.blend.png

To use this file, you'll need to replace the movie file for a valid one:
sequencer-bug.blend2

**System Information** Operating system and graphics card **Blender Version** 2.72b Hash: 9e963ae **Short description of error** A custom proxy file in a Movie Strip doesn't display the same input Color Space then the strip, and is unaffected by some Color Management settings. **Exact steps for others to reproduce the error** - Add a Movie strip in Sequencer and set its Input Color Space as Linear - the colors will change - Enable "Proxy", "Proxy Custom File" and select the same movie file as the proxy. Set a resolution to test it. The proxy will not follow the Color Space chosen in the strip properties. The proxy will not respect even the Sequence's Color Space selected in the Color Management settings. Maybe it's related to blender/blender-staging@4ce7d5cb79 Another issue certainly related: The proxy file just uses a "Look" selected in the Color Management settings when the "Use Curves" option is enabled, or some "View" other the "Default" is selected, as Film or Raw. With Default View and without "Use Curves", the proxy display is unaffected by any selected Look. The screenshot below shows the difference between the No Proxy display and the Proxy display: ![sequencer-proxy-color-space-bug-m.blend.png](https://archive.blender.org/developer/F134386/sequencer-proxy-color-space-bug-m.blend.png) To use this file, you'll need to replace the movie file for a valid one: [sequencer-bug.blend2](https://archive.blender.org/developer/F134388/sequencer-bug.blend2)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro

The previous file was wrong, this is the correct one: sequencer-proxy-color-space-bug.blend. Although this issue is not file dependent.

The previous file was wrong, this is the correct one: [sequencer-proxy-color-space-bug.blend](https://archive.blender.org/developer/F134402/sequencer-proxy-color-space-bug.blend). Although this issue is not file dependent.

Added subscriber: @Sergey

Added subscriber: @Sergey

Please don't mix separate reports into one.

Fix for the first issue will go to git soon. For the second part please test blender with first fix and if you'll still have issue please submit report with exact steps of reproducing the issue. Currently i can not fully understand what you meant there and can't really see the issue.

Please don't mix separate reports into one. Fix for the first issue will go to git soon. For the second part please test blender with first fix and if you'll still have issue please submit report with exact steps of reproducing the issue. Currently i can not fully understand what you meant there and can't really see the issue.

This issue was referenced by ec9a137bb2

This issue was referenced by ec9a137bb2718d8288b8eed876cc385e3f7efdf9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ec9a137bb2.

Closed by commit ec9a137bb2.

Thank you for the fix, Sergey, and sorry for the inconvenient. I'll follow what you're saying and give some feedback soon.

Thank you for the fix, Sergey, and sorry for the inconvenient. I'll follow what you're saying and give some feedback soon.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43078
No description provided.