Fix T43078: Strip custom proxy files did not respect color space settings